# Decovalex2023

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
decodfn/: main.py  mapdfn.py  pft_to_csv.py
models/SURAO_Task_F1/: .gitignore  README.md  main.py  main.yaml  regions_2.txt  repository.in  run.sh  stoch_fractures_WP_flow.in
models/SURAO_Task_F1/ref_output/: repository-obs-0.csv  repository-obs-0.pft  repository.out  stoch_fractures_WP_flow.out
pflotran/: fterm.sh  makefile  rel_image.sh
pflotran/build-image/: Dockerfile
pflotran/dwp_test/: README.md  pflotran.in  prepare_fields.py
pflotran/dwp_test/reference_calculation/: dwp reaction.ods
pflotran/eos_test/: eos_test.in  input_fields.h5  parameters-543.h5  pflotran  pflotran.in  prepare_fields.py  run.sh
pflotran/rel-image/: Dockerfile
src/: mapdfn.py  mapdfn2pflotran.py  surface.py
tests/: README.md  test_main.py  test_mapdfn2pflotran.py
tests/SURAO_reaction_sandbox/: main.py  mapdfn.py  notes  regions_2.txt  run.sh  stoch_fractures_WP.in
tests/SURAO_reaction_sandbox/update_vypoctu_zdroje/: pflotran_vstup.in  reaction_sandbox_dwp.F90
tests/test_data/: compare.pvsm
tests/test_data/dfn_2/: main.yaml
tests/test_data/dfn_2/ref/: Ttensor.txt  anisotropic_k.h5  isotropic_k.h5  mapELLIPSES.h5  mapELLIPSES.txt  materials.h5  porosity.h5  tortuosity.h5
tests/test_data/dfn_252/ref/: Ttensor.txt  anisotropic_k.h5  (+6 more)
tests/test_data/dfn_5/: main.yaml
tests/test_data/repo_cube/: main.yaml
tests/test_data/surface_cube/: main.yaml
(+10 files in other folders)
